<resources>
    <string name="app_name" translatable="false">E-kart</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="LOGIN"> login</string>
    <string name="singup">singup</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_Singup">SingupActivity</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="confirm_password">confirm Password</string>
    <string name="e_mail">E-MAIL</string>
    <string name="address">Address</string>
    <string name="todo">TODO</string>
    <string name="phone_number">Phone Number</string>
    <string name="logout">LOGOUT</string>
    <string name="remember_me">Remember Me</string>
    <string name="i_am_admin">i am seller</string>
    <string name="i_am_not_admin">i am not seller</string>
    <string name="LoginAdmin">Login admin</string>
    <string name="product_name">product name</string>
    <string name="product_description1">Product Description</string>
    <string name="add_product">Add Product</string>
    <string name="product_price">product price</string>
    <string name="title_activity_home">homeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="e_kart">E-KART</string>
    <string name="name">NAME:</string>
    <string name="price">PRICE :</string>
    <string name="favorite">favorite</string>
    <string name="be_seller">Be Seller</string>
    <string name="logout_user">Logout</string>
    <string name="kart">kart</string>
    <string name="myproduct">My product</string>
    <string name="user_name">User name</string>
    <string name="product_nameview">Product Name</string>
    <string name="productimage">product Image</string>
    <string name="product_description">Product Description</string>
    <string name="product_priceview">Product price</string>
    <string name="total_price">Total Price :</string>
    <string name="buy_all">Buy all</string>


</resources>