<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/page2"
    android:background="@color/blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">


    <Button
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@color/orange"
        android:filterTouchesWhenObscured="false"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FF5722"
        android:textColorHint="#FF5722"
        android:text="@string/e_kart"
        android:textSize="51sp"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        app:backgroundTint="@color/orange"

        />

    <EditText
        android:id="@+id/registerNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textColor="#F6E8E8"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_below="@id/logo"
        />


    <EditText
        android:id="@+id/registerpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerNumber"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="#F6E8E8"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"

        android:textColorHint="#FFFFFF"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerNumber"

        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:labelFor="@id/checkBox"
        android:text="@string/remember_me"
        android:textColor="#F6E8E8"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/registerpassword"
        app:layout_constraintTop_toBottomOf="@+id/registerNumber" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="272dp"
        android:layout_height="94dp"
        android:layout_below="@id/checkBox"
        android:layout_centerHorizontal="true"
        android:layout_gravity="start"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/archivo_black"
        android:includeFontPadding="false"
        android:text="@string/LOGIN"
        android:textColor="#F6E8E8"
        android:textColorHint="#F8F3F3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#4CAF50"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/iamadmin"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/login_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/i_am_admin"
        android:textColor="#F6E8E8"
        android:layout_alignParentStart="true"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/iamnotadmin"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/login_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/i_am_not_admin"
        android:textColor="#F6E8E8"
        android:layout_alignParentEnd="true"
        android:textSize="15sp"
        android:textAlignment="textEnd"
        />

</RelativeLayout>