<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="175dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="5dp"
    app:cardElevation="10dp"
    android:backgroundTint="@color/skyblue"
    >

    <RelativeLayout
        android:layout_width="175dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_product_image"
            android:text="@string/product_nameview"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/select_product_image"
            android:layout_width="172dp"
            android:layout_height="200dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:src="@drawable/select_product_image"
            android:layout_marginEnd="11dp"

            android:layout_marginBottom="8dp"

            android:scaleType="centerCrop"
            android:contentDescription="@string/productimage" />

        <TextView
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_product_image"
            android:text="@string/product_description"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_description"
            android:text="@string/product_priceview"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="gone" />


    </RelativeLayout>



</androidx.cardview.widget.CardView>