<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/singup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".ui.login.SingupActivity"
    android:background="@color/blue">

    <Button
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:background="@color/orange"
        android:filterTouchesWhenObscured="false"
        android:shadowColor="@color/black"
        android:text="@string/e_kart"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FF5722"
        android:textColorHint="#FF5722"
        android:textSize="51sp"
        android:textStyle="bold"
        app:backgroundTint="@color/orange" />


    <EditText
        android:id="@+id/registername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:autofillHints="John123"
        android:ems="10"
        android:fontFamily="@font/croissant_one"
        android:gravity="center_horizontal"
        android:inputType="textEmailAddress"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/registerpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registername"
        android:layout_centerHorizontal="true"
        android:autofillHints="john@565"
        android:ems="10"
        android:fontFamily="@font/croissant_one"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/secondpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerpassword"
        android:layout_centerHorizontal="true"
        android:autofillHints="same password"
        android:ems="10"
        android:fontFamily="@font/croissant_one"
        android:gravity="center_horizontal"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/registerNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondpassword"
        android:layout_centerHorizontal="true"
        android:autofillHints="enter your email"
        android:ems="10"
        android:fontFamily="@font/croissant_one"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:hint="@string/phone_number"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerNumber"
        android:layout_centerHorizontal="true"
        android:autofillHints="enter your address"
        android:ems="10"
        android:fontFamily="@font/croissant_one"
        android:gravity="center_horizontal"
        android:inputType="textEmailAddress"
        android:hint="@string/address"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:textSize="24sp" />


    <Button
        android:id="@+id/signup1"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:layout_alignBottom="@id/signup1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:fontFamily="@font/croissant_one"
        android:text="@string/singup"
        android:textSize="24sp"
        app:backgroundTint="#4CAF50" />

</RelativeLayout>

