<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"

    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.e_kart.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.e_kart.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.e_kart.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.e_kart.ui.Favorite.FavoriteActivity"
        android:label="Favorite"
        tools:layout="@layout/activity_favorite" />

    <fragment
        android:id="@+id/nav_beseller"
        android:name="com.example.e_kart.ui.BeSeller.BesellerActivity1"
        android:label="BeSeller"
        tools:layout="@layout/activity_beseller1" />

    <fragment
        android:id="@+id/nav_myproduct"
        android:name="com.example.e_kart.ui.MyProduct.MyProductActivity"
        android:label="MyProducts"
        tools:layout="@layout/activity_my_product" />

    <fragment
        android:id="@+id/nav_kart"
        android:name="com.example.e_kart.ui.Kart.KartActivity"
        android:label="KART"
        tools:layout="@layout/activity_kart" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.e_kart.ui.settings.SettingsActivity"
        android:label="Settings"
        tools:layout="@layout/activity_settings" />
</navigation>