<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/singup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:filterTouchesWhenObscured="false"
        android:text="@string/e_kart"
        android:textColor="#F8F1F1"
        android:textSize="51sp"
        android:textStyle="bold"
        app:backgroundTint="#00FFFFFF" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        android:layout_centerInParent="true"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="126dp"
        android:fontFamily="@font/croissant_one"
        android:text="@string/singup"
        android:textSize="24sp"
        app:backgroundTint="#034CAF50" />

    <Button
        android:id="@+id/button1"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="125dp"
        android:fontFamily="@font/croissant_one"
        android:shadowColor="#121111"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="24sp"

        app:backgroundTint="#004CAF50"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

</RelativeLayout>