<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminaddnewproductActivity"
    android:background="@color/blue"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginEnd="2dp"
        android:layout_toStartOf="@id/product_name"
        android:height="60dp"
        android:paddingEnd="20sp"

        android:layout_marginTop="20sp"
        android:text="@string/name"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="29sp" />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:background="#FC5AB3DC"
        android:hint="@string/product_name"
        android:inputType="textMultiLine"
        android:padding="2dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/select_product_image"
        android:layout_width="119dp"
        android:layout_height="40sp"
        android:layout_below="@id/product_name"
        android:layout_marginStart="50dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="40dp"
        android:background="#4CAF50"
        android:src="@drawable/select_product_image"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/select_product_image2"
        android:layout_width="119dp"
        android:layout_height="40sp"
        android:layout_below="@id/product_name"
        android:layout_marginStart="30dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="40dp"
        android:layout_toEndOf="@id/select_product_image"
        android:background="#4CAF50"
        android:src="@drawable/select_product_image"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/select_product_image3"
        android:layout_width="119dp"
        android:layout_height="40sp"
        android:layout_below="@id/select_product_image"
        android:layout_marginStart="50dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="40dp"
        android:background="#4CAF50"
        android:src="@drawable/select_product_image"


        android:textAlignment="center" />

    <ImageView
        android:id="@+id/select_product_image4"
        android:layout_width="119dp"
        android:layout_height="40sp"
        android:layout_below="@id/select_product_image2"
        android:layout_marginStart="30dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="40dp"
        android:layout_toEndOf="@id/select_product_image3"
        android:background="#4CAF50"
        android:src="@drawable/select_product_image"

        android:textAlignment="center" />

    <EditText
        android:id="@+id/product_description"
        android:layout_width="325dp"
        android:layout_height="121dp"
        android:layout_below="@id/select_product_image3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="45dp"
        android:background="#FC5AB3DC"
        android:hint="@string/product_description"
        android:inputType="textMultiLine"
        android:padding="20dp"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_below="@id/product_description"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="38dp"

        android:background="#FC91A1A8"
        android:hint="@string/product_price"
        android:inputType="textMultiLine"
        android:padding="2dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_toStartOf="@id/product_price"
        android:layout_below="@id/product_description"
        android:layout_marginTop="38dp"
        android:text="@string/price"
        android:textSize="29sp"
        android:paddingTop="5dp"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/add_new_product"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_price"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="44dp"
        android:layout_marginRight="45dp"
        android:backgroundTint="@color/yellow"
        android:padding="17dp"
        android:text="@string/add_product"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:targetApi="lollipop" />


</RelativeLayout>