<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    xmlns:android="http://schemas.android.com/apk/res/android" />
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ProductDetalisActivity">

    <ImageView
        android:id="@+id/Product_image_details1"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:scaleType="centerCrop"
        />

    <ImageView
        android:id="@+id/Product_image_details2"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:layout_below="@id/count_number_btn"
        />

    <ImageView
        android:id="@+id/Product_image_details3"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/Product_image_details2"
        />

    <ImageView
        android:id="@+id/Product_image_details4"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="20dp"
        android:layout_below="@id/Product_image_details3"
        />

    <TextView
        android:id="@+id/product_name_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Product_image_details1"
        android:text="@string/product_name"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/product_desription_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name_details"
        android:text="@string/product_description"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_marginTop="15dp" />


    <TextView
        android:id="@+id/product_price_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_desription_details"
        android:text="@string/price"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="15dp" />
    
    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
        android:id="@+id/count_number_btn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:elevation="6dp"
        app:textSize="15dp"
        app:initialNumber="1"
        app:finalNumber="10"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/product_price_details"
        android:layout_marginTop="10dp" />

<Button
    android:id="@+id/product_add_to_cart_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/blue"
    android:layout_margin="15dp"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:text="Add to Cart"
    android:textColor="@color/white"
    android:textSize="18sp"

    />


</RelativeLayout>
</ScrollView>